# BastionBox

./: .gitignore  LICENSE  README.md  bastion-airgap.spec  bastion.spec  pyproject.toml  requirements.txt
bastion/: app.py
bastion/core/: config.py  i18n.py
bastion/core/agent/: compaction.py  diffing.py  loop.py  permissions.py  personas.py  schemas.py
bastion/core/docs/: attach.py  charts.py  extract.py  templater.py  writer.py
bastion/core/index/: chunker.py  hybrid.py
bastion/core/llm/: engine.py  grammar.py  hardware.py  llama_backend.py  ollama_backend.py  registry.py  templates.py
bastion/core/security/: audit.py  crypto.py  jail.py  netguard.py
bastion/core/store/: db.py
bastion/core/tools/: base.py  command.py  compute.py  fs_tools.py  library_tools.py  notes.py  office_tools.py  search_tools.py
bastion/integrations/: hotkey.py  tray.py
bastion/resources/fonts/: README.txt
bastion/resources/styles/: tactical_dark.qss  tactical_light.qss
bastion/ui/: icons.py  main_window.py  onboarding.py  theme.py  theme_picker.py  titlebar.py  transition.py  tutorial.py  winchrome.py
bastion/ui/chat/: agent_worker.py  approval_bridge.py  chat_view.py  diff_dialog.py
docs/: security.md
tests/: test_agent_loop.py  test_agent_notes.py  test_attachments.py  test_audit.py  test_audit_findings.py  test_charts_i18n.py  test_crypto.py  test_engine.py  test_index.py  test_jail.py  test_m6.py  test_netguard.py  test_office.py  test_office_hardening.py  test_pdf_analysis.py  test_templates_library.py  test_ui_smoke.py  test_workflows.py
(+4 files in other folders)
