[project]
name = "bastionbox"
version = "0.1.0"
description = "A fully local, air-gap-capable AI workstation assistant — nothing leaves the box."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LukiBox" }]

[project.urls]
Homepage = "https://github.com/LukiBox"
Repository = "https://github.com/LukiBox"

# Runtime dependencies are intentionally split by capability so an air-gapped
# site can install only what it will actually run. See requirements.txt for the
# full, commented set and the security rationale behind each optional group.
dependencies = []

[project.optional-dependencies]
ui = ["PySide6>=6.6"]
llama = ["llama-cpp-python>=0.2.60"]
ollama = ["ollama>=0.3"]
crypto = ["cryptography>=42", "argon2-cffi>=23"]
docs = ["pymupdf>=1.24", "pypdf>=4.0", "python-docx>=1.1", "openpyxl>=3.1",
        "reportlab>=4.0"]
index = ["tree-sitter>=0.21", "tree-sitter-languages>=1.10"]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
# Run the suite from the repo root without installing the package: make the
# 'bastion' package importable and keep test discovery tight.
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
